=== 2017-04-24
* Removed all direct delegateds. Now relies on method_missing to call Watir methods.
  * You may have to change RSpec matchers to use method instead of predicate.
=== Version 1.2.2/ 2017/02-14
* Enhancements
  * Added wait method to page class(wait document readystate as complete)
=== Version 1.2.1/ 2017-01-26
* Enhancements
  * Added array methods to section collections
  * Added ability to call style method with no parameters
  * clean up frame and iframe nesting
  * Update travis.yml
  * Added numerous missing element types
  * Added two new methods that check without throwing exception
  * Update to use watir 6 instead of watir-webdriver
=== 2017-01-25
* Enhancements
  * Added list_items method to UnorderedList to get an array of children.
  * Speed optimizations for UnorderedList
  * Added list_items method to OrderedList to get an array of children
  * Speed optimization for OrderedList
  * Added support for the Italic(i) element
  * Added size and location methods to all elements
  * Added width, height, and centre methods for elements
===Version 1.2.0/ 2017-01-24
* Enhancements
  * Added new page_section/ page_sections method to accessor
  * Added row accessors method and support for finding row elements directly
  * Default element tag to element
=== Version 1.1.9/2017-01-22
* Enhancements
  * Populate_page_with now supports radio groups
  * Added new page_url_value mehod that is created when you define page_url to return the value
  * Checking the name of accessors to ensure it does not conflict with an existing druid method name
  * Added support for dynamically finding elements inside iframes
  * Reverted the method name check due to unintended consequences
  * Added support to use multiple identifiers when locating nested frames / iframes
  * Remove methods for clearing radio buttons
  * Add support bold tag
  * Fixed wait_for_expected_title so it detects if the title changes
=== 2017-01-20
* Enhancements